...
                  setState(() {
                    isNextStep = true;
                  });
                }
              }
            },
            buttonText: 'Get Activation Code',
          ),
        ],
      );

  Widget _buildOtpSubmit(double width) => Column(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
...
                      MaterialPageRoute(
                        builder: (context) => const HomePage(),
                      ),
                    );
                  }
                },
                buttonText: 'Activate',
              ),
            ],
          )
        ],
      );
}
...
